[package]
name = "firewood-benchmark"
version.workspace = true
edition.workspace = true
authors = [
     "Aaron Buchwald <aaron.buchwald56@gmail.com>",
     "Ron Kuris <ron.kuris@avalabs.org>",
]
description = "Benchmarking tool for Firewood, an embedded key-value store optimized for blockchain state."
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
firewood.workspace = true
hex.workspace = true
clap = { workspace = true, features = ['string'] }
sha2.workspace = true
metrics.workspace = true
metrics-util.workspace = true
metrics-exporter-prometheus = "0.17.2"
tokio = { workspace = true, features = ["rt", "sync", "macros", "rt-multi-thread"] }
rand.workspace = true
rand_distr.workspace = true
pretty-duration = "0.1.1"
env_logger.workspace = true
log.workspace = true
fastrace = { workspace = true, features = ["enable"] }
fastrace-opentelemetry = { version = "0.13.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = "0.6.0"

[features]
logger = ["firewood/logger"]

[lints]
workspace = true
