[package]
name = "cargo-update-all-revs"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
toml_edit = { version = "0.19.8", features = ["serde"] }
