[package]
name = "firewood-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.2"
firewood = { path = "../firewood" }
metrics = "0.24.1"
metrics-util = "0.19.0"
chrono = "0.4.39"
oxhttp = "0.3.0"
coarsetime = "0.1.35"

[build-dependencies]
cbindgen = "0.28.0"
