[package]
name = "firewood-ffi"
version.workspace = true
edition.workspace = true
authors = [
     "Aaron Buchwald <aaron.buchwald56@gmail.com>",
     "Arran Schlosberg <519948+ARR4N@users.noreply.github.com>",
     "Austin Larson <78000745+alarso16@users.noreply.github.com>",
     "Darioush Jalali <darioush.jalali@avalabs.org>",
     "Ron Kuris <ron.kuris@avalabs.org>",
]
description = "C FFI bindings for Firewood, an embedded key-value store optimized for blockchain state."
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
# Workspace dependencies
coarsetime.workspace = true
firewood.workspace = true
firewood-storage.workspace = true
metrics.workspace = true
metrics-util.workspace = true
# Regular dependencies
chrono = "0.4.41"
oxhttp = "0.3.1"
# Optional dependencies
env_logger = { workspace = true, optional = true }
axum = "0.8.4"
tokio = { version = "1.47.1" , features = ["rt-multi-thread"]}

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
jemalloc_pprof = { version = "0.8.1", features = ["flamegraph", "symbolize"] }

[dev-dependencies]
# Workspace dependencies
test-case.workspace = true

[features]
logger = ["dep:env_logger", "firewood/logger"]
ethhash = ["firewood/ethhash"]

[build-dependencies]
cbindgen = "0.29.0"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["cbindgen"]
