[package]
name = "firewood-macros"
version = "0.6.0"
edition.workspace = true
authors = [
     "Ron Kuris <ron.kuris@avalabs.org>",
]
description = "Proc macros for Firewood metrics"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
# Regular dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
# Workspace dependencies
firewood-metrics.workspace = true
test-case.workspace = true
# Regular dependencies
trybuild = "1.0"

[lints]
workspace = true

# test-case is only referenced from the trybuild fixtures under
# tests/compile_pass/, which cargo-machete does not scan.
[package.metadata.cargo-machete]
ignored = ["test-case"]
