[package]
name = "firewood"
version = "0.0.4"
edition = "2021"
authors = [
     "Ted Yin (@Determinant) <ted@avalabs.org>",
     "Dan Sover (@exdx) <dan.sover@avalabs.org>",
     "Hao Hao (@haohao-os) <hao.hao@avalabs.org>",
     "Gyuho Lee (@gyuho) <gyuho.lee@avalabs.org>",
     "Sam Batschelet (@hexfusion) <sam.batschelet@avalabs.org>",
     "Ron Kuris (@rkuris) <ron.kuris@avalabs.org>",
]
description = "Firewood is an embedded key-value store, optimized to store blockchain state."
license-file = "../LICENSE.md"
homepage = "https://avalabs.org"
readme = "../README.md"

[dependencies]
aquamarine = "0.5"
async-trait = "0.1"
bytemuck = { version = "1.14", features = ["derive"] }
enum-as-inner = "0.6"
growth-ring = { version = "0.0.4", path = "../growth-ring" }
libaio = {version = "0.0.4", path = "../libaio" }
futures = "0.3"
hex = "0.4"
lru = "0.12"
metered = "0.9"
nix = {version = "0.27", features = ["fs", "uio"]}
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.36", features = ["rt", "sync", "macros", "rt-multi-thread"] }
typed-builder = "0.18"
bincode = "1.3"
bitflags = { version = "2.4", features = ["bytemuck"] }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
stacktrace = "0.2"
backtrace = "0.3"

[features]
logger = ["dep:env_logger", "log"]

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
keccak-hasher = "0.15"
rand = "0.8"
triehash = "0.8"
assert_cmd = "2.0"
predicates = "3.1"
clap = { version = "4.4", features = ['derive'] }
test-case = "3.3"
pprof = { version = "0.13", features = ["flamegraph"] }

[[bench]]
name = "hashops"
harness = false

[lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
