[package]
name = "firewood-fwdctl"
version.workspace = true
edition.workspace = true
authors = [
     "Dan Laine <daniel.laine@avalabs.org>",
     "Dan Sover <dan.sover@avalabs.org>",
     "Hao Hao <hao.hao@avalabs.org>",
     "Richard Pringle <rpring9@gmail.com>",
     "Ron Kuris <ron.kuris@avalabs.org>",
     "Sam Batschelet <sam.batschelet@avalabs.org>",
     "xinifinity <113067541+xinifinity@users.noreply.github.com>",
     "zdf <orientzh1230@gmail.com>",
]
description = "Command-line tool for Firewood, an embedded key-value store optimized for blockchain state."
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fwdctl"
path = "src/main.rs"

[dependencies]
firewood.workspace = true
firewood-storage.workspace = true
clap = { workspace = true, features = ["cargo"] }
env_logger = { workspace = true }
log = "0.4.20"
tokio = { workspace = true, features = ["full"] }
futures-util = "0.3.30"
hex = "0.4.3"
csv = "1.3.1"
nonzero_ext = "0.3.0"

[dev-dependencies]
anyhow = "1.0.79"
assert_cmd = "2.0.13"
predicates = "3.1.0"
serial_test = "3.0.0"
rand = { workspace = true }

[lints]
workspace = true
