[package]
name = "firewood-fwdctl"
version = "0.1.0"
edition.workspace = true
authors = [
     "Dan Laine <daniel.laine@avalabs.org>",
     "Dan Sover <dan.sover@avalabs.org>",
     "Hao Hao <hao.hao@avalabs.org>",
     "Richard Pringle <rpring9@gmail.com>",
     "Ron Kuris <ron.kuris@avalabs.org>",
     "Sam Batschelet <sam.batschelet@avalabs.org>",
     "xinifinity <113067541+xinifinity@users.noreply.github.com>",
     "zdf <orientzh1230@gmail.com>",
]
description = "Command-line tool for Firewood, an embedded key-value store optimized for blockchain state."
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fwdctl"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["cargo", "string"] }
env_logger.workspace = true
firewood.workspace = true
firewood-replay.workspace = true
firewood-storage.workspace = true
hex.workspace = true
log.workspace = true
nonzero_ext.workspace = true
# Regular dependencies
csv = "1.4.0"
indicatif = "0.18.3"
askama = "0.15.1"
num-format = "0.4.4"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9"
thiserror = "2.0"
# AWS SDK dependencies
aws-config = "1.0"
aws-sdk-ec2 = "1.0"
aws-sdk-ssm = "1.0"
aws-smithy-runtime-api = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
rand.workspace = true
dirs = "6.0"
aws-sdk-sts = "1.96.0"

[features]
ethhash = ["firewood/ethhash"]
logger = ["firewood/logger"]

[dev-dependencies]
# Workspace dependencies
firewood-storage = { workspace = true, features = ["test_utils"] }
rand.workspace = true
tempfile.workspace = true
# Regular dependencies
assert_cmd = "2.1.2"
predicates = "3.1.3"

[lints]
workspace = true
