[package]
name = "growth-ring"
version = "0.0.4"
edition = "2021"
keywords = ["wal", "db", "futures"]
license = "../LICENSE.md"
description = "Simple and modular write-ahead-logging implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.12"
scan_fmt = "0.2"
regex = "1.6"
async-trait = "0.1"
futures = "0.3"
nix = {version = "0.27", features = ["fs", "uio"]}
libc = "0.2"
bytemuck = {version = "1.13", features = ["derive"]}
thiserror = "1.0"
tokio = { version = "1.28", features = ["fs", "io-util", "sync"] }
crc32fast = "1.3"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
indexmap = "2.2"
tokio = { version = "1.28", features = ["tokio-macros", "rt", "macros"] }
test-case = "3.1.0"

[lib]
name = "growthring"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
