[package]
name = "rpc"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "process-server"
test = false
bench = false

[[bin]]
name = "client"
test = false
bench = false

[dependencies]
firewood = { version = "0.0.4", path = "../firewood" }
prost = "0.12.0"
thiserror = "1.0.47"
tokio = { version = "1.32", features = ["sync", "rt-multi-thread"] }
tonic = { version = "0.10", features = ["tls"] }
tracing = { version = "0.1" }
clap = { version = "4.4", features = ["derive"] }
tempdir = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10.0"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
