[package]
name = "firewood-metrics"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Shared metrics utilities for Firewood."

[dependencies]
metrics.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
