[package]
name = "firewood-replay"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Replay engine for Firewood block replay logs."

[dependencies]
firewood.workspace = true
firewood-storage.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
rkyv = "0.8.1"
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
hex = "0.4.3"
git2 = "0.19"
plotly.workspace = true
serde.workspace = true
rmp-serde = "1.3.0"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "firewood-replay"
path = "src/main.rs"
