[package]
name = "firewood-replay"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Replay log types and engine for Firewood database operations."

[dependencies]
firewood.workspace = true
firewood-metrics.workspace = true
firewood-storage.workspace = true
metrics.workspace = true
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_with = "3.12"
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["metrics", "serde_bytes"]