[package]
name = "xtask"
description = "Firewood development task runner"
version = "0.0.0"
publish = false
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap.workspace = true
toml = "1.1.2"
topological-sort = "0.2.2"
ureq = "3.3.0"

[lints]
workspace = true
